--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,8 @@
-.form-input, .form-textarea {
-  &:active, &:focus, &:visited,
+.form-input,
+.form-textarea {
+  &:active,
+  &:focus,
+  &:visited,
   &:-webkit-autofill,
   &:-webkit-autofill:hover,
   &:-webkit-autofill:focus,
@@ -15,6 +18,7 @@
 
 ::-webkit-input-placeholder,
 ::-ms-input-placeholder,
-::-moz-placeholder { /* Chrome/Opera/Safari */
+::-moz-placeholder {
+  /* Chrome/Opera/Safari */
   color: rgba(#fff, 0.4) !important;
 }
