--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -3,7 +3,8 @@
 .post-body {
   font-size: 1.1rem;
 
-  ul, ol {
+  ul,
+  ol {
     margin-block-start: unset;
     margin-block-end: unset;
   }
@@ -45,11 +46,12 @@
   @media (max-width: 450px) {
     margin-bottom: 8rem;
   }
-  .prev, .next {
+  .prev,
+  .next {
     position: relative;
-    border: 1px solid rgba(0,0,0,0.05);
+    border: 1px solid rgba(0, 0, 0, 0.05);
     border-radius: 4px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
     transition: all 350ms ease-in-out;
     padding: 1rem 1.5rem;
     cursor: pointer;
@@ -57,7 +59,7 @@
       margin: 0.5rem 0;
     }
     a {
-      color: rgba(0,0,0,0.7);
+      color: rgba(0, 0, 0, 0.7);
       text-decoration: none;
       vertical-align: middle;
     }
@@ -70,8 +72,9 @@
       margin: 0;
     }
     &:hover {
-      color: rgba(0,0,0,0.8);
-      box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11), 0 5px 15px 0 rgba(0,0,0,0.08);
+      color: rgba(0, 0, 0, 0.8);
+      box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
+        0 5px 15px 0 rgba(0, 0, 0, 0.08);
       svg {
         color: $accent;
       }
@@ -102,12 +105,15 @@
 .badges::hover,
 .badges::focus {
   &::before {
-    display: none
+    display: none;
   }
 }
 
-.h-note, .h-tip, .h-tldr, .h-warning {
-  color: rgba(0,0,0,0.85);
+.h-note,
+.h-tip,
+.h-tldr,
+.h-warning {
+  color: rgba(0, 0, 0, 0.85);
   font-size: 1rem !important;
   letter-spacing: 0.035rem;
   line-height: 1.4 !important;
@@ -116,13 +122,13 @@
   border-left-width: 6px;
   border-left-style: solid;
   border-radius: 5px;
-  box-shadow: 0.5px 1px 6px rgba(0,0,0,0.25);
+  box-shadow: 0.5px 1px 6px rgba(0, 0, 0, 0.25);
   margin: 1rem auto !important;
   padding: 0.75rem 1.25rem 1.25rem;
   overflow: hidden;
   &::before {
     display: block;
-    color: rgba(0,0,0,0.7);
+    color: rgba(0, 0, 0, 0.7);
     font-size: 1.25em;
     font-weight: 600;
     letter-spacing: 0.035em;
@@ -137,26 +143,26 @@
     margin-bottom: 0.15em !important;
   }
   code {
-    background: rgba(0,0,0,0.075) !important;
+    background: rgba(0, 0, 0, 0.075) !important;
   }
-  @media(max-width: 767px) {
+  @media (max-width: 767px) {
     margin: 25px 0;
   }
 }
 
 .h-note {
-  background: rgba(3,169,244,0.05);
+  background: rgba(3, 169, 244, 0.05);
   /* background: #fff; */
-  border-left-color: rgba(0,191,255, 0.75);
+  border-left-color: rgba(0, 191, 255, 0.75);
   &::before {
     content: 'Note:';
-    color: #0095D5;
+    color: #0095d5;
   }
 }
 
 .h-tip {
-  background: rgba(76,175,80,0.075);
-  border-left-color: rgba(0,178,135, 0.75);
+  background: rgba(76, 175, 80, 0.075);
+  border-left-color: rgba(0, 178, 135, 0.75);
   &::before {
     content: 'Tip:';
     color: #009267;
@@ -164,8 +170,8 @@
 }
 
 .h-tldr {
-  background: rgba(0,0,0,0.035);
-  border-left-color: rgba(0,0,0,0.45);
+  background: rgba(0, 0, 0, 0.035);
+  border-left-color: rgba(0, 0, 0, 0.45);
   &::before {
     content: 'tldr;';
     font-size: 1.5em;
@@ -174,12 +180,11 @@
 }
 
 .h-warning {
-  background: rgba(255,153,0,0.075);
-  border-left-color: rgba(244,172,48, 0.75);
+  background: rgba(255, 153, 0, 0.075);
+  border-left-color: rgba(244, 172, 48, 0.75);
   &::before {
     content: 'Warning:';
-    color: #D49C10;
+    color: #d49c10;
     letter-spacing: 0.045em;
   }
 }
-
