--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-Light.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-Light.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-Light.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-Light.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: 300;
   font-style: normal;
@@ -9,7 +10,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-LightItalic.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-LightItalic.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-LightItalic.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-LightItalic.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: 300;
   font-style: italic;
@@ -18,7 +20,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-Regular.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-Regular.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-Regular.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-Regular.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: normal;
   font-style: normal;
@@ -27,7 +30,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-Italic.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-Italic.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-Italic.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-Italic.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: normal;
   font-style: italic;
@@ -36,7 +40,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-Medium.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-Medium.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-Medium.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-Medium.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: 500;
   font-style: normal;
@@ -45,7 +50,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-MediumItalic.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-MediumItalic.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-MediumItalic.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-MediumItalic.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: 500;
   font-style: italic;
@@ -54,7 +60,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-Bold.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-Bold.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-Bold.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-Bold.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: bold;
   font-style: normal;
@@ -63,7 +70,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-BoldItalic.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-BoldItalic.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-BoldItalic.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-BoldItalic.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: bold;
   font-style: italic;
@@ -72,7 +80,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-ExtraBold.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-ExtraBold.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-ExtraBold.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-ExtraBold.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: 800;
   font-style: normal;
@@ -81,7 +90,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-ExtraBoldItalic.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-ExtraBoldItalic.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-ExtraBoldItalic.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-ExtraBoldItalic.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: 800;
   font-style: italic;
@@ -90,7 +100,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-Black.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-Black.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-Black.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-Black.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: 900;
   font-style: normal;
@@ -99,7 +110,8 @@
 
 @font-face {
   font-family: 'TTNorms2';
-  src: url('/fonts/TTNorms/TTNorms-BlackItalic.woff2') format('woff2'), url('/fonts/TTNorms/TTNorms-BlackItalic.woff') format('woff');
+  src: url('/fonts/TTNorms/TTNorms-BlackItalic.woff2') format('woff2'),
+    url('/fonts/TTNorms/TTNorms-BlackItalic.woff') format('woff');
   unicode-range: U+20-7E;
   font-weight: 900;
   font-style: italic;
